<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_emotion_emotions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:background="@android:color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/detail_dominant_emotion_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            tools:text="@string/surprise" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/detail_dominant_emotion_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            tools:text="100%" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/anger"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/anger_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="0%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/contempt"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/contempt_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="0%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/disgust"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/disgust_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="0%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/fear"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/fear_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="0%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/joy"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/joy_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="100%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/sadness"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/sadness_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="0%" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/surprise"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <com.android.attrecto.emotiondemo.ui.widget.RobotoLightTextView
            android:id="@+id/surprise_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            tools:text="0%" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/close_dialog_btn"
            style="@style/floatingActionButton"
            android:layout_alignParentRight="true"
            android:layout_marginTop="90dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/expand_less_white_36" />

    </RelativeLayout>


</LinearLayout>
